kube/albuquery-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: albuquery-ingress
spec:
  rules:
  - host: lsst-pdac.ncsa.illinois.edu
    http:
      paths:
      - backend:
          serviceName: albuquery-service
          servicePort: 8080
        path: /dax/albuquery
